# shamir-secret-sharing

./: .gitignore  CMakeLists.txt  README.md
include/: galois.h  shamir.h
src/: galois.c  shamir.c  shamir_secret_sharing.c
